--- a/package.json
+++ b/package.json
@@ -10,10 +10,27 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mantine/carousel": "7.1.7",
+    "@mantine/code-highlight": "7.1.7",
+    "@mantine/core": "7.1.7",
+    "@mantine/dates": "7.1.7",
+    "@mantine/dropzone": "7.1.7",
+    "@mantine/form": "7.1.7",
+    "@mantine/hooks": "7.1.7",
+    "@mantine/modals": "7.1.7",
+    "@mantine/notifications": "7.1.7",
+    "@mantine/nprogress": "7.1.7",
+    "@mantine/spotlight": "7.1.7",
+    "@mantine/tiptap": "7.1.7",
+    "@tabler/icons-react": "2.40.0",
+    "@tiptap/extension-link": "2.1.12",
+    "@tiptap/react": "2.1.12",
+    "@tiptap/starter-kit": "2.1.12",
     "axios": "^1.5.1",
     "clsx": "^2.0.0",
     "dayjs": "1.11.10",
     "deep-object-diff": "1.1.9",
+    "embla-carousel-react": "7.1.0",
     "file-saver": "^2.0.5",
     "lodash-es": "4.17.21",
     "path-to-regexp": "6.2.1",
@@ -22,6 +39,7 @@
     "react-error-boundary": "4.0.11",
     "react-hook-form": "7.47.0",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "4.11.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.16.0",
     "react-router-loading": "1.0.2",
