--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "@tiptap/extension-link": "2.1.12",
     "@tiptap/react": "2.1.12",
     "@tiptap/starter-kit": "2.1.12",
+    "@types/html-pdf": "3.0.3",
     "axios": "^1.5.1",
     "clsx": "^2.0.0",
     "dayjs": "1.11.10",
     "deep-object-diff": "1.1.9",
     "embla-carousel-react": "7.1.0",
     "file-saver": "^2.0.5",
+    "html2pdf.js": "0.10.1",
     "lodash-es": "4.17.21",
     "path-to-regexp": "6.2.1",
     "react": "^18.2.0",
