--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "html2pdf.js": "0.10.1",
     "lodash-es": "4.17.21",
     "path-to-regexp": "6.2.1",
+    "primereact": "10.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "4.0.11",
