--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "react-router-loading": "1.0.2",
     "react-transition-group": "4.4.5",
     "styled-components": "^6.0.8",
-    "tsdef": "0.0.14"
+    "tsdef": "0.0.14",
+    "zustand": "4.4.7"
   },
   "devDependencies": {
     "@types/file-saver": "^2.0.5",
