--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@mantine/nprogress": "7.1.7",
     "@mantine/spotlight": "7.1.7",
     "@mantine/tiptap": "7.1.7",
+    "@react-pdf-viewer/core": "3.12.0",
     "@tabler/icons-react": "2.40.0",
     "@tiptap/extension-link": "2.1.12",
     "@tiptap/react": "2.1.12",
@@ -44,6 +45,9 @@
     "react-hook-form": "7.47.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "4.11.0",
+    "react-image-crop": "11.0.5",
+    "react-modal": "3.16.1",
+    "react-pdf-viewer": "0.1.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.16.0",
     "react-router-loading": "1.0.2",
@@ -58,6 +62,7 @@
     "@types/node": "20.8.0",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/react-modal": "3.16.3",
     "@types/react-transition-group": "4.4.7",
     "@types/styled-components": "5.1.28",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
